--- a/templates/project/new.html.twig
+++ b/templates/project/new.html.twig
@@ -3,12 +3,21 @@
 {% block title %}New request{% endblock %}
 
 {% block framed %}
+
     <h1 class="text-primary">Create a new request</h1>
         {% form_theme form 'bootstrap_4_layout.html.twig' %}
         {{ form_start(form) }}
-        {{ form_widget(form) }}
+    {{ form_row(form.title) }}
+    <div class="form-group">
+        <label for="project_description" class="required">Description</label>
+        <textarea name="project[description]" id="project_description" class="descriptionProject" required="required"></textarea>
+    </div>
+    {{ form_row(form.coverFile) }}
+    {{ form_row(form.sdgs) }}
+    {{ form_row(form.skills) }}
         <button class="btn btn-primary mb-3">Create a request</button>
-        {{ form_end(form) }}
+        {{ form_end(form, {'render_rest': false}) }}
+
 {% endblock %}
 
 
