--- a/assets/styles/project.scss
+++ b/assets/styles/project.scss
@@ -18,3 +18,9 @@ img.status_3 {
   top: 5px;
 }
 
+.descriptionProject {
+  height: 150px;
+  margin-top: 0px;
+  margin-bottom: 0px;
+  width: 100%;
+}
