--- a/templates/component/project/_project_tchat.html.twig
+++ b/templates/component/project/_project_tchat.html.twig
@@ -4,7 +4,7 @@
         <div class="row">
 
             <div class="card w-75 m-1 border border-blueish" style="height: 400px;">
-                <div class="card-body overflow-auto">
+                <div class="card-body overflow-auto scroll" id="scroll">
                     {% for message in project.tchat.messages %}
                         {% if message.speaker.avatar.name == 'DEFAULTAVATAR_sdg-wheel.png' %}
                             <img class="card-img-top m-0 img-fluid" src="{{ asset('build/images/sdg_icons/sdg-wheel.png') }}" alt="Picture {{ message.speaker.firstname }}" style="height: 30px; width: auto">
@@ -12,6 +12,7 @@
                             <img class="card-img-top m-0 img-fluid" src="{{ asset('uploads/images/avatar/') }}{{ message.speaker.avatar.name }}" alt="Picture {{ message.speaker.firstname }}" style="height: 30px; width: auto">
                         {% endif %}
                         <small class="mb-0 badge badge-light border">{{ message.speaker }}</small>
+                        <small>at : {{ message.sendAt | format_datetime(pattern="hh mm a '-' dd MMM yy, ZZZZ") }}</small>
                         <p> <em>{{ message.content }} </em></p>
                     {% endfor %}
                 </div>
@@ -33,11 +34,11 @@
 
                                 <div class="badge badge-light border text-wrap" style="width: 6rem;">
                                     {% if user.avatar.name == 'DEFAULTAVATAR_sdg-wheel.png' %}
-                                        <img class="card-img-top m-0 img-fluid" src="{{ asset('build/images/sdg_icons/sdg-wheel.png') }}" alt="Picture {{ user.firstname }}"  style="height: 30px; width: auto">
+                                        <img class="card-img-top m-0 img-fluid" src="{{ asset('build/images/sdg_icons/sdg-wheel.png') }}" alt="Picture {{ user.FullNameIfMemberOrONG }}"  style="height: 30px; width: auto">
                                     {% else %}
-                                        <img class="card-img-top m-0 img-fluid" src="{{ asset('uploads/images/avatar/') }}{{ user.avatar.name }}" alt="Picture {{ user.firstname }}" style="height: 30px; width: auto">
+                                        <img class="card-img-top m-0 img-fluid" src="{{ asset('uploads/images/avatar/') }}{{ user.avatar.name }}" alt="Picture {{ user.FullNameIfMemberOrONG }}" style="height: 30px; width: auto">
                                     {% endif %}
-                                    {{ user.firstname }} {{ user.lastname }}
+                                    {{ user.FullNameIfMemberOrONG }}
                                 </div>
                             </li>
                         {% endfor %}
@@ -50,5 +51,6 @@
         <p>no tchat set on this project</p>
     {% endif %}
 </div>
-
-
+{% block javascripts %}
+    {{ encore_entry_script_tags('scroll') }}
+{% endblock %}
