Selection based on Status fixed on Chrome + Add info on top page

--- a/assets/styles/variables.scss
+++ b/assets/styles/variables.scss
@@ -9,6 +9,6 @@ $theme-colors: (
         "grey": #F5F5F5,
 );
 
-$font-family-base: 'Montserrat Alternates', 'Roboto';
+$font-family-base: 'Roboto', 'Montserrat Alternates';
 
 $enable-gradients: true;
