--- a/templates/component/_project_list.html.twig
+++ b/templates/component/_project_list.html.twig
@@ -1,33 +1,46 @@
 <div class="d-flex flex-column align-content-center justify-content-center">
-    <div class="button-group filter-button-group text-center mb-5">
-        <div><button class="border-0 p-0">
-                <img class="project-filters" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
-            </button>
-            {% for sdg in sdgs  %}
+    <div class="filters">
+        <div class="ui-group">
+            <div class="button-group filter-button-group text-center mb-5" data-filter-group="sdg">
                 <button class="border-0 p-0">
-                    <img class="project-filters" title="{{ sdg.name }}" data-filter=".{{ sdg.identifier }}" src="{{ asset('build/images/sdg_icons/' ~ sdg.image)}}" style="width: 50px" >
+                    <img class="project-filters" data-filter="*" src="{{ asset('build/images/sdg_icons/SDG_Wheel.png')}}" style="width: 50px" >
                 </button>
-            {% endfor %}
+                {% for sdg in sdgs  %}
+                    <button class="border-0 p-0">
+                        <img class="project-filters" title="{{ sdg.name }}" data-filter=".{{ sdg.identifier }}" src="{{ asset('build/images/sdg_icons/' ~ sdg.image)}}" style="width: 50px" >
+                    </button>
+                {% endfor %}
+            </div>
         </div>
-        <div class="text-center mb-4">
-            <select class="project-filters custom-select col-2 mt-2">
-                <option selected>Project Status</option>
-                {#        <option data-filter=".status_0" value="1">To be validated</option>#}
-                <option data-filter=".status_1" value="1">Looking for volunteers</option>
-                <option data-filter=".status_2" value="1">Opened</option>
-                <option data-filter=".status_3" value="1">Closed</option>
-            </select>
+
+        <div class="text-center my-4">
+            <a class="btn btn-blueish dropdown-toggle" href="#" role="button" id="dropdownMenuLink" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
+                Project Status
+            </a>
+
+            <div class="dropdown-menu text-center" aria-labelledby="dropdownMenuLink">
+                <div class="ui-group">
+                    <div class="button-group filter-button-group text-center mb-5" data-filter-group="status">
+                        <a class="project-filters dropdown-item" data-filter=".status_1" href="#">Starting</a>
+                        <a class="project-filters dropdown-item" data-filter=".status_2" href="#">Opened</a>
+                        <a class="project-filters dropdown-item" data-filter=".status_3" href="#">Closed</a>
+                    </div>
+                </div>
+            </div>
         </div>
     </div>
 </div>
+</div>
 
+<div id="project-list-title" class="h3">
+</div>
 
-<div class="container">
+<div class="container-fluid">
     <div class="row row-eq-height">
         <div class="grid card-deck col-12">
             {% for project in projects %}
                 {% if project.status is not same as 0 or is_granted('ROLE_ADMIN') or app.user and app.user.participants.owner %}
-                    <div class="element-item vh-50 m-3 p-0 card {% for sdg in project.sdgs %}{{ sdg.identifier }}{% endfor %} status_{{ project.status}} col-md-3 col-sm-12" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
+                    <div class="element-item {% for sdg in project.sdgs %}{{ sdg.identifier }} {% endfor %} status_{{ project.status}} col-md-2 col-sm-12 vh-50 m-3 p-0 card" data-commonskills="{{ project.commonSkillsWithUser|length }}" >
                         <div class="position-relative">
                             <a href="{{ path('project_show', {'id': project.id}) }}">
                                 {% if project.cover == 'DEFAULT_COVER.png' %}
