fix the issue number 1008

--- a/assets/styles/dashboard.scss
+++ b/assets/styles/dashboard.scss
@@ -120,6 +120,10 @@
   border-left: var(--blueish) solid 5px;
 }
 
+.box-request-po {
+  border-left: var(--primary) solid 5px;
+}
+
 .box-project-volunteer {
   border-left: var(--secondary-alt) solid 5px;
 }
