same font for title, homepage content update : concept, Q&A, how it work

--- a/templates/component/homepage/_concept.html.twig
+++ b/templates/component/homepage/_concept.html.twig
@@ -4,13 +4,12 @@
         <div class="col-lg-8 col-sm-12">
             <h2 class="text-primary">Concept</h2>
             <p class="lead text-dark" >
-                Quanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.
-            </p><p class="lead text-dark" >
-                Procedente igitur mox tempore cum adventicium nihil inveniretur, relicta ora maritima in Lycaoniam adnexam Isauriae se contulerunt ibique densis intersaepientes itinera praetenturis provincialium et viatorum opibus pascebantur.
+                Wanna Gonna is a collaborative platform for volunteering which brings people together using their skills and the needs of associations, organizations, communities, companies, and public services from all around the world.</p><p class="lead text-dark" >
+                Together we can make a difference and change the world !
             </p>
         </div>
         <div class="col-lg-4 col-sm-12 d-flex d-flex justify-content-center">
-            <img src="https://picsum.photos/200" class="img-fluid" alt="">
+            <img src="{{ asset('build/images/favicon.png') }}" class="img-fluid" alt="">
         </div>
     </div>
 </div>
