--- a/templates/component/homepage/_howdoesitwork.html.twig
+++ b/templates/component/homepage/_howdoesitwork.html.twig
@@ -7,25 +7,38 @@
             <div class="row my-5 p-5">
                 <div class="col-lg-5 d-flex flex-column justify-content-center p-5">
                     <p class="lead text-dark" >
-                        boboyQuanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.
-                    </p><p class="lead text-dark" >
-                        Procedente igitur mox tempore cum adventicium nihil inveniretur, relicta ora maritima in Lycaoniam adnexam Isauriae se contulerunt ibique densis intersaepientes itinera praetenturis provincialium et viatorum opibus pascebantur.
+                        You submit any project/idea/concept that will have a good impact on our society and/or our environment. On the other side of the platform, there is a community of volunteers who are willing to give our time and skills to work together as a team with you to accomplish the project and do something good for the world.
                     </p>
                 </div>
                 <div class="col-lg-7 embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hWtdpxxVy2A" options=""></iframe>
+                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/fzMFYTJiLc8"></iframe>
                 </div>
             </div>
 
             <div class="row my-5 p-5">
                 <div class="col-lg-7 embed-responsive embed-responsive-16by9">
-                    <iframe class="embed-responsive-item" src="https://www.youtube.com/embed/hWtdpxxVy2A" options=""></iframe>
+                    <iframe class="embed-responsive-item" src="images/process.png"></iframe>
                 </div>
                 <div class="col-lg-5 d-flex flex-column justify-content-center p-5">
                     <p class="lead text-dark" >
-                        boboyQuanta autem vis amicitiae sit, ex hoc intellegi maxime potest, quod ex infinita societate generis humani, quam conciliavit ipsa natura, ita contracta res est et adducta in angustum ut omnis caritas aut inter duos aut inter paucos iungeretur.
+                        Our Process :
                     </p><p class="lead text-dark" >
-                        Procedente igitur mox tempore cum adventicium nihil inveniretur, relicta ora maritima in Lycaoniam adnexam Isauriae se contulerunt ibique densis intersaepientes itinera praetenturis provincialium et viatorum opibus pascebantur.
+                        1/Submit an idea or concept to start a new «project»
+                    </p>
+                    <p class="lead text-dark" >
+                        2/Platform Team will Review and Validate
+                    </p>
+                    <p class="lead text-dark" >
+                        3/Volunteers will propose their help
+                    </p>
+                    <p class="lead text-dark" >
+                        4/Project owner will select and validate the volunteers
+                    </p>
+                    <p class="lead text-dark" >
+                        5/Volunteers will work on the tasks
+                    </p>
+                    <p class="lead text-dark" >
+                        6/Once the Project is done, Volunteers and Project Owner will give each other some reviews
                     </p>
                 </div>
 
