--- a/templates/component/homepage/_questionsanswers.html.twig
+++ b/templates/component/homepage/_questionsanswers.html.twig
@@ -14,8 +14,9 @@
 
                 <div id="collapseOne" class="collapse show" aria-labelledby="headingOne" data-parent="#accordion">
                     <div class="card-body">
-                        Any project/idea/concept that might have a good impact on our society and/or our environment are good candidates for Wanna Gonna. On the other side of the platform, we are a community of volunteers who are willing so give our time and skills, to work together as a team in order to realize them.            </div>
-                </div>
+                        Wanna Gonna is a good way for you to play an important role in improving our world.
+                        Thanks to the cultural diversity of Wanna Gonna's members, it will be an opportunity for you to experience various international projects with a diverse team in various domains!
+                    </div>
             </div>
 
             <div class="card">
@@ -36,16 +37,94 @@
                 <div class="card-header" id="headingThree">
                     <h5 class="mb-0">
                         <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseThree" aria-expanded="false" aria-controls="collapseThree">
-                            Q&A 3
+                            How much time I should be available ?
                         </button>
                     </h5>
                 </div>
                 <div id="collapseThree" class="collapse" aria-labelledby="headingThree" data-parent="#accordion">
                     <div class="card-body">
-                        Anim pariatur cliche reprehenderit, enim eiusmod high life accusamus terry richardson ad squid. 3 wolf moon officia aute, non cupidatat skateboard dolor brunch. Food truck quinoa nesciunt laborum eiusmod. Brunch 3 wolf moon tempor, sunt aliqua put a bird on it squid single-origin coffee nulla assumenda shoreditch et. Nihil anim keffiyeh helvetica, craft beer labore wes anderson cred nesciunt sapiente ea proident. Ad vegan excepteur butcher vice lomo. Leggings occaecat craft beer farm-to-table, raw denim aesthetic synth nesciunt you probably haven't heard of them accusamus labore sustainable VHS.
+                        It depends on you. It can vary according to the project(s) you are involved in and how much time you can spend on each project.
                     </div>
                 </div>
             </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFour">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFour" aria-expanded="false" aria-controls="collapseFour">
+                                I am not sure if I have the skills for participating ?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFour" class="collapse" aria-labelledby="headingFour" data-parent="#accordion">
+                        <div class="card-body">
+                            The minimum required skill is your motivation!  All other skills are evaluated and can be useful depending on the projects.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingFive">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseFive" aria-expanded="false" aria-controls="collapseFive">
+                                Where can I see the existing projects ?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseFive" class="collapse" aria-labelledby="headingFive" data-parent="#accordion">
+                        <div class="card-body">
+                            All the past and current projects are accessible from the "Projects" section of this website
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingSix">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSix" aria-expanded="false" aria-controls="collapseSix">
+                                I have an idea. How can I develop it ?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseSix" class="collapse" aria-labelledby="headingSix" data-parent="#accordion">
+                        <div class="card-body">
+                            Go to the section "I have a concept" and describe the concept or idea that you have
+                            Wanna Gonna will analyze the concept and, with the help of volunteers, will try our best to bring your concept to fruition.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingSeven">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseSeven" aria-expanded="false" aria-controls="collapseSeven">
+                                I am from an NGO. Can you help with an existing project we are working on?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseSeven" class="collapse" aria-labelledby="headingSeven" data-parent="#accordion">
+                        <div class="card-body">
+                            We will definitely try. Register your project describing the types of skills you need to push your projects forward in your neighborhood or across the globe. Wanna Gonna will assess the project and form a team in order to support your project.
+                        </div>
+                    </div>
+                </div>
+
+                <div class="card">
+                    <div class="card-header" id="headingEight">
+                        <h5 class="mb-0">
+                            <button class="btn btn-link collapsed" data-toggle="collapse" data-target="#collapseEight" aria-expanded="false" aria-controls="collapseEight">
+                                How long will a project last?
+                            </button>
+                        </h5>
+                    </div>
+                    <div id="collapseEight" class="collapse" aria-labelledby="headingEight" data-parent="#accordion">
+                        <div class="card-body">
+                            Of course it depend on the depth of the project as well as the availability of the volunteers. WannaGonna community can help on short term tasks as well on long term projects.
+                        </div>
+                    </div>
+                </div>
+
         </div>
     </div>
+</div>
 </div>
