--- a/templates/component/homepage/_whoweare.html.twig
+++ b/templates/component/homepage/_whoweare.html.twig
@@ -4,7 +4,7 @@
         <h2 class="text-primary">Who we are ?</h2>
         <div class="w-100">
             <p class="lead text-dark" >
-                Procedente igitur mox tempore cum adventicium nihil inveniretur, relicta ora maritima in Lycaoniam adnexam Isauriae se contulerunt ibique densis intersaepientes itinera praetenturis provincialium et viatorum opibus pascebantur.
+                We are a community of volunteers, from various countries, who want to use our skills to help people, NGO in their projects. We have motivation to collaborate internationally to improve our society and world.
             </p>
         </div>
         <div id="top-stats" class="d-flex justify-content-around">
