--- a/templates/component/message/_messages.html.twig
+++ b/templates/component/message/_messages.html.twig
@@ -2,7 +2,7 @@
     <div class="row justify-content-sm-center">
         <div class="home-section d-flex flex-column bg-light rounded p-2 w-100 mx-4">
             <div>
-                <h1>Inbox</h1>
+                <h4>Inbox</h4>
                 <p><a href="{{ path('messages_new')}}">Write a new message to someone else</a></p>
                 {% if contacts is not empty %}
                     <div class="container p-0 m-0">
@@ -27,7 +27,7 @@
                                 </div>
                             {% endfor %}
                 {% else %}
-                    <h2>You don't have messages yet</h2>
+                    <p>You don't have messages yet</p>
                 {% endif %}
                     </div>
                 </div>
