add birthdate when register

--- a/templates/registration/register.html.twig
+++ b/templates/registration/register.html.twig
@@ -9,7 +9,11 @@
                     <h1 class="text-primary">Register as {{ (app.request.attributes.get('_route') == 'app_register') ? 'a Member' : 'an Organization' }}</h1>
                     {% form_theme registrationForm 'bootstrap_4_layout.html.twig' %}
                     {{ form_start(registrationForm) }}
-                    {{ form_widget(registrationForm) }}
+                    {{ form_row(registrationForm.firstname) }}
+                    {{ form_row(registrationForm.lastname) }}
+                    <p>Birthdate</p>
+                    {{ form_row(registrationForm.birthdate) }}
+                    {{ form_rest(registrationForm) }}
                     <button type="submit" class="btn btn-primary">Register</button>
                     {{ form_end(registrationForm) }}
 {% endblock %}
